[package]
edition = "2021"
name = "cns-rust"
version = "0.1.0"

[dependencies]
async-recursion = "1"
base64 = "0.13"
env_logger = "0.8"
libc = "0.2"
log = {version = "0.4", features = ["release_max_level_error"]}
once_cell = "1"
regex = "1"
rlimit = "0.8"
tokio = {version = "1", features = ["rt", "net", "macros", "io-util", "rt-multi-thread"]}

[features]
multi-threaded = ["tokio/rt-multi-thread"]

[profile.dev]
codegen-units = 256
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
panic = 'unwind'
rpath = false
split-debuginfo = 'off'
strip = true
