[package]
edition = "2021"
name = "cns-rust"
version = "0.1.2"

[dependencies]
async-recursion = "1"
base64 = "0.22"
env_logger = "0.11"
libc = "0.2"
log = { version = "0.4", features = ["release_max_level_error"] }
mimalloc = { version = "0.1", default-features = false }
once_cell = "1"
regex = "1"
rlimit = "0.10"
tokio = { version = "1", features = ["rt", "net", "macros", "io-util", "rt-multi-thread"] }

[features]
multi-threaded = ["tokio/rt-multi-thread"]

[profile.dev]
codegen-units = 256
opt-level = 0
incremental = true
lto = false
overflow-checks = true
debug = true

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = true
lto = 'fat'
opt-level = 'z'
overflow-checks = false
panic = 'unwind'
rpath = false
split-debuginfo = 'off'
strip = true
